# sutradhaar

./: .gitignore  Overview.md  pyproject.toml
scripts/: build_pyz.sh
src/orion/: client.py  config.py  context.py  fs.py  main.py  orion.py  prompts.py  summarizers.py
src/orion/resources/: __init__.py  index.html  prompt_apply_system.txt  prompt_conversation_system.txt  prompt_summarizer_pd_system.txt
src/orion/workbench/: client.py  config.py  context.py  external.py  fs.py  main.py  models.py  prompts.py  settings.py  summarizers.py  tools.py
src/orion/workbench/resources/: prompt_apply_system.txt  prompt_archive_summary_system.txt  prompt_conversation_system.txt  prompt_split_system.txt  prompt_summarizer_css_system.txt  prompt_summarizer_html_system.txt  prompt_summarizer_image_system.txt  prompt_summarizer_info_system.txt
src/sutradhar/: client.py  config.py  context.py  editor.py  external.py  fs.py  main.py  orion.py  prompts.py  summarizers.py  tools.py
src/sutradhar/resources/: index.html  prompt_conversation_system.txt  prompt_summarizer_file_system.txt
