[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion"
version = "0.1.0"
description = "Python code editor"
readme = "README.md"
requires-python = ">=3.11"
# orion: Remove tiktoken dependency now that :tokenCount was removed to avoid installation/runtime issues and reduce optional deps.
dependencies = [
  "requests>=2.31,<3",
  "pydantic>=2,<3",
  "PyYAML>=6.0"
]

# CLI entry points (optional; add one per module bootstrap)
[project.scripts]
orion = "orion.workbench.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["orion"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
no_implicit_reexport = true
disallow_untyped_defs = true
warn_unused_ignores = true
mypy_path = ["src"]

[tool.importlinter]
root_package = "."

# Example: layered architecture (shared <- alpha <- beta)
[[tool.importlinter.contracts]]
name = "Layered modules"
type = "layers"
layers = ["orion"]

# Example: forbid cross-module internal imports
[[tool.importlinter.contracts]]
name = "No internal leakage"
type = "forbidden"
source_modules = ["orion"]
forbidden_modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# orion: Configure setuptools to use the src/ layout for package discovery.
[tool.setuptools.packages.find]
where = ["src"]

# orion: Ensure resource files (prompts, html) are included in distributions.
[tool.setuptools.package-data]
"orion.workbench.resources" = ["*.txt", "*.html"]
